Remove height change from active card (avoid content shift bug on mobile)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -72,7 +72,7 @@ svg {
 
 .card.active-card {
   box-shadow: 5px 11px 13px 0px rgb(0 0 0 / 60%);
-  height: 30vh;
+  /* height: 30vh; */
 }
 
 .open-map-app {
